<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#888888"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="250px"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/new_post"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/titleBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/titre"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/th_me"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerTheme"
                android:layout_width="match_parent"
                android:layout_height="42dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/detailBox"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:text="@string/detail"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:minHeight="200dp"
                android:contentDescription="@string/images_to_post" />

            <Button
                android:id="@+id/addPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_valid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="bt_valid_click"
            android:text="@string/valider" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>